--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.9'
 
 services:
   api:
+    container_name: node-api
     build: .
     volumes:
       - .:/usr/src/app
@@ -9,6 +10,7 @@ services:
     ports:
       - '3000:3000'
   db:
+    container_name: db
     image: 'postgres'
     ports:
       - '5432:5432'
