--- a/server/common/api.yml
+++ b/server/common/api.yml
@@ -191,7 +191,7 @@ components:
         email:
           type: string
           example: iliyan@new-email.com
-        giveName:
+        givenName:
           type: string
           minLength: 2
           maxLength: 30
