--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "express-openapi-validator": "^4.12.11",
     "knex": "^0.95.11",
     "pg": "^8.7.1",
-    "pino": "^6.11.3",
-    "uuid": "^8.3.2"
+    "pino": "^6.11.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
@@ -46,5 +45,5 @@
     "prettier": "^2.3.0",
     "supertest": "^6.1.3"
   },
-  "author": "Iliyan Vlahov"
+  "author": "Iliyan Vlahov <iliyan.vlahov@gmail.com> (https://github.com/Taliss)"
 }
