--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express-openapi-validator": "^4.12.11",
     "knex": "^0.95.11",
     "pg": "^8.7.1",
-    "pino": "^6.11.3"
+    "pino": "^6.11.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
