--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "node-docker-app",
   "version": "1.0.0",
   "description": "Playground for docker and node",
+  "jest": {
+    "verbose": true
+  },
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
     "compile": "babel server --out-dir dist --delete-dir-on-start --source-maps inline --copy-files",
     "dev": "nodemon server --exec babel-node --config .nodemonrc.json | pino-pretty",
     "dev:debug": "nodemon server --exec babel-node --config .nodemonrc.json --inspect | pino-pretty",
-    "test": "mocha --require @babel/register --exit",
-    "test:debug": "mocha --require @babel/register --inspect-brk --exit",
+    "test": "jest",
     "init-db": "node server/db/init.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
@@ -34,13 +36,13 @@
     "@babel/preset-env": "^7.14.4",
     "@babel/register": "^7.13.16",
     "babel-eslint": "^10.1.0",
-    "chai": "^4.3.4",
+    "babel-jest": "^27.3.1",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "mocha": "^8.4.0",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.7",
     "pino-pretty": "^5.0.1",
     "prettier": "^2.3.0",
