--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build: .
     volumes:
       - .:/usr/src/app
+      - /usr/src/app
     command: npm run dev
     ports:
       - '3000:3000'
